***Fixed
--- Navigation
    -URL
    -Cursor
--- Home
    -Image
    -Z-index
--- Scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,27 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
 a {
     color: inherit;
     text-decoration: none;
